GNOME Bugzilla – Bug 683471
All gestures get cancelled after missing a button release event
Last modified: 2012-09-06 11:19:31 UTC
When releasing the mouse button outside of the current window the button release event is lost and GestureAction will cancel the gesture on the first motion event with no button pressed. Due to a missing gesture_unregister_point() GestureAction will then get very confused and will cancel all subsequent gesture, even if they are perfectly legit.
Created attachment 223615 [details] [review] gesture-action: unregister point on missed release events When we miss button release events (eg. when they happen outside of our window) we must ensure that the corresponding point is removed from the array of tracked points, otherwise GestureAction will get very confused and will cancel all subsequent gestures.
Review of attachment 223615 [details] [review]: looks good.
Attachment 223615 [details] pushed as 9caf9ff - gesture-action: unregister point on missed release events